[package]
name = "fchashmap"
version = "0.1.3"
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A fixed capacity no_std hashmap"
repository = "https://github.com/Simsys/fchashmap"
readme = "readme.md"
keywords = ["no-std", "static", "no-heap", "embedded"]
categories = ["no-std", "embedded", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash32 = "0.2.1"

[dependencies.arrayvec]
version = "0.7.0"
default-features = false

[dev-dependencies]
hash32-derive = "0.1.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.2"
